--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "numpy>=2.3.4",
+    "psycopg[binary]>=3.2.10",
+    "pydantic>=2.12.2",
+    "pydantic-settings>=2.11.0",
+    "pypdf2>=3.0.1",
+    "sentence-transformers>=5.1.1",
+    "torch==2.2.2", # TODO: update when I test on more modern machine. Intel Chip Mac can't go past 2.2.2
+]
