--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "chainlit>=2.8.3",
+    "dspy>=3.0.3",
     "numpy>=2.3.4",
     "psycopg[binary]>=3.2.10",
     "pydantic>=2.12.2",
     "pydantic-settings>=2.11.0",
     "pypdf>=6.1.1",
+    "redis>=6.4.0",
     "sentence-transformers>=5.1.1",
     "torch==2.2.2", # TODO: update when I test on more modern machine. Intel Chip Mac can't go past 2.2.2
 ]
