--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "chainlit>=2.8.3",
     "dspy>=3.0.3",
-    "numpy>=2.3.4",
+    # "numpy>=2.3.4",
+    "numpy<2.0.0",
     "psycopg[binary]>=3.2.10",
     "pydantic>=2.12.2",
     "pydantic-settings>=2.11.0",
