chore: clean up .env

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 # Database
-DATABASE_USER="user"
-DATABASE_PASSWORD="password"
-DATABASE_HOST="localhost"
+DATABASE_USERNAME=user
+DATABASE_PASSWORD=password1230
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_NAME="vectordb"
+DATABASE_NAME=vectordb
 
 # Redis
-REDIS_HOST="localhost"
-REDIS_PORT="6379"
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
 # Models
-OLLAMA_BASE_URL="http://localhost:11434"
-LLM_MODEL="llama3"
-EMBEDDING_MODEL_NAME="all-MiniLM-L6-v2"
+OLLAMA_BASE_URL=http://localhost:11434
+LLM_MODEL=llama3
+EMBEDDING_MODEL_NAME=all-MiniLM-L6-v2
