--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "psycopg[binary]>=3.2.10",
     "pydantic>=2.12.2",
     "pydantic-settings>=2.11.0",
+    "pymupdf>=1.26.5",
     "pypdf>=6.1.1",
     "redis>=6.4.0",
     "sentence-transformers>=5.1.1",
