--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "dspy>=3.0.3",
     # "numpy>=2.3.4",
     "numpy<2.0.0",
-    "psycopg[binary]>=3.2.10",
+    "psycopg[binary,pool]>=3.2.10",
     "pydantic>=2.12.2",
     "pydantic-settings>=2.11.0",
     "pymupdf>=1.26.5",
