--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "chainlit>=2.8.3",
     "dspy>=3.0.3",
+    "fastapi>=0.116.2",
     # "numpy>=2.3.4",
     "numpy<2.0.0",
     "psycopg[binary,pool]>=3.2.10",
