--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "chainlit>=2.8.3",
     "dspy>=3.0.3",
     "fastapi>=0.116.2",
+    "httpx>=0.28.1",
     # "numpy>=2.3.4",
     "numpy<2.0.0",
     "psycopg[binary,pool]>=3.2.10",
@@ -18,4 +19,10 @@ dependencies = [
     "redis>=6.4.0",
     "sentence-transformers>=5.1.1",
     "torch==2.2.2", # TODO: update when I test on more modern machine. Intel Chip Mac can't go past 2.2.2
+    "websockets>=15.0.1",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.1",
 ]
